src/objects/MX_WB_EvaluacionSeccion__c.object
<CustomObject>
    <fields>
        <fullName>MX_WB_CatalogoSeccion__c</fullName>
        <description>Relación con objeto catálogo sección</description>
        <label>Catálogo Seccion</label>
        <referenceTo>CatalogoSeccion__c</referenceTo>
        <relationshipName>EvaluacionesSeccion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_WB_DejarDeHacer__c</fullName>
        <description>Campo que almacena las recomendaciones a dejar de hacer para una sección</description>
        <label>Dejar de hacer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_EmpezarAHacer__c</fullName>
        <label>Empezar a hacer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_Evaluacion__c</fullName>
        <label>Evaluación</label>
        <referenceTo>Evaluacion__c</referenceTo>
        <relationshipName>EvaluacionesSeccion</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_WB_SeguirHaciendo__c</fullName>
        <label>Seguir Haciendo</label>
        <type>TextArea</type>
    </fields>
    <label>Evaluación - Sección</label>
    <nameField>
        <label>Nombre de Evaluación - Seccion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EvaluacionesSeccion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>